--- a/ZulZula/ZulZula.csproj
+++ b/ZulZula/ZulZula.csproj
@@ -48,9 +48,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ILogWriter.cs" />
     <Compile Include="IStockReader.cs" />
     <Compile Include="StockEntry.cs" />
     <Compile Include="TradeAlgorithms\BuyAfterFallTradeAlgorithm.cs" />
+    <Compile Include="LogWriterListView.cs" />
     <Compile Include="XirrCalculator.cs" />
     <Compile Include="YahooStocksReader.cs" />
     <Compile Include="MainForm.cs">
@@ -63,6 +65,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Stock.cs" />
+    <EmbeddedResource Include="MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
