--- a/src/ZulZula/ZulZula.csproj
+++ b/src/ZulZula/ZulZula.csproj
@@ -77,11 +77,13 @@
   <ItemGroup>
     <Compile Include="ILogger.cs" />
     <Compile Include="ILogWriter.cs" />
-    <Compile Include="IStockEntry.cs" />
+    <Compile Include="Stock\HistoricalStockEntry.cs" />
+    <Compile Include="Stock\IStockEntry.cs" />
     <Compile Include="IStockReader.cs" />
     <Compile Include="LoggerImpl.cs" />
-    <Compile Include="StockEntry.cs" />
-    <Compile Include="StockFactory.cs" />
+    <Compile Include="Stock\IStockFactory.cs" />
+    <Compile Include="Stock\StockEntry.cs" />
+    <Compile Include="Stock\StockFactory.cs" />
     <Compile Include="StockReaders\Yahoo\YahooStockResponseData.cs" />
     <Compile Include="TradeAlgorithms\BuyAfterFallTradeAlgorithm.cs" />
     <Compile Include="LogWriterListView.cs" />
@@ -96,7 +98,7 @@
     <Compile Include="TradeAlgorithms\ITradeAlgorithm.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Stock.cs" />
+    <Compile Include="Stock\Stock.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
