--- a/src/ZulZula/ZulZula.csproj
+++ b/src/ZulZula/ZulZula.csproj
@@ -79,16 +79,15 @@
     <Compile Include="ILogWriter.cs" />
     <Compile Include="Stock\HistoricalStockEntry.cs" />
     <Compile Include="Stock\IStockEntry.cs" />
-    <Compile Include="IDataProvider.cs" />
+    <Compile Include="DataProviders\IDataProvider.cs" />
     <Compile Include="LoggerImpl.cs" />
     <Compile Include="Stock\IStockFactory.cs" />
     <Compile Include="Stock\StockEntry.cs" />
     <Compile Include="Stock\StockFactory.cs" />
-    <Compile Include="StockReaders\Yahoo\YahooStockResponseData.cs" />
     <Compile Include="TradeAlgorithms\BuyAfterFallTradeAlgorithm.cs" />
     <Compile Include="LogWriterListView.cs" />
     <Compile Include="XirrCalculator.cs" />
-    <Compile Include="StockReaders\Yahoo\YahooDataProvider.cs" />
+    <Compile Include="DataProviders\Yahoo\YahooDataProvider.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
