--- a/src/ZulZula/App.config
+++ b/src/ZulZula/App.config
@@ -2,6 +2,9 @@
 <configuration>
     <configSections>
       <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog"/>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="ZulZula.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
       <targets>
@@ -15,4 +18,11 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+    <userSettings>
+        <ZulZula.Properties.Settings>
+            <setting name="AutoClearUserLog" serializeAs="String">
+                <value>True</value>
+            </setting>
+        </ZulZula.Properties.Settings>
+    </userSettings>
 </configuration>
