--- a/src/ZulZula/ZulZula.csproj
+++ b/src/ZulZula/ZulZula.csproj
@@ -54,11 +54,7 @@
     </Reference>
     <Reference Include="Microsoft.Practices.Unity">
       <HintPath>..\..\external\unity\Microsoft.Practices.Unity.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.VisualBasic" />
-    <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\external\json\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="NLog">
       <HintPath>..\..\external\nlog\2.0.0.2000\.NET Framework 4.0\NLog.dll</HintPath>
@@ -75,17 +71,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ILogger.cs" />
-    <Compile Include="ILogWriter.cs" />
+    <Compile Include="ExcelApplicationWrapper.cs" />
+    <Compile Include="Log\ILogger.cs" />
+    <Compile Include="Log\ILogWriter.cs" />
     <Compile Include="Stock\HistoricalStockEntry.cs" />
     <Compile Include="Stock\IStockEntry.cs" />
     <Compile Include="DataProviders\IDataProvider.cs" />
-    <Compile Include="LoggerImpl.cs" />
+    <Compile Include="Log\LoggerImpl.cs" />
     <Compile Include="Stock\IStockFactory.cs" />
     <Compile Include="Stock\StockEntry.cs" />
     <Compile Include="Stock\StockFactory.cs" />
     <Compile Include="TradeAlgorithms\BuyAfterFallTradeAlgorithm.cs" />
-    <Compile Include="LogWriterListView.cs" />
+    <Compile Include="Log\LogWriterListView.cs" />
     <Compile Include="TradeAlgorithms\TradeResult.cs" />
     <Compile Include="DataProviders\Yahoo\YahooDataProvider.cs" />
     <Compile Include="MainForm.cs">
@@ -119,7 +116,6 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <None Include="LocalStocksData\Yahoo\Google.csv" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
